styles.css
@import url('https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&family=Roboto+Slab&display=swap');


:root {
    --white: #fafafa;
    --light-blue: #dbe2ef;
    --blue2: #a2d5f2;
    --black: #303841;
    --dark1: #206a5d;
    --green: #00af91;
    --light-green: #16c79a;
    --blue: #3f72af;
    --yellow: #ffe227;
    --red: #eb596e;
    --orange: #ffa45b;
}

*,
*::before,
*::after {
    box-sizing: inherit;
}

html {
    box-sizing: border-box;
    font-family: 'Poppins', sans-serif;
}

body {
    background: var(--light-blue);
    position: relative;
    color: var(--white);
    margin: 0;
    padding: 0;
    min-height: 100vh;
    display: flex;
    justify-content: center;
    align-items: center;
}

/* ------- HEADERS ------- */
header {
    display: flex;
    justify-content: space-between;
    align-items: center;
    position: absolute;
    top: 0%;
    width: 100%;
    background: var(--dark1);
    color: var(--white);
    padding: 0.5rem 3rem;
}

.logo-container {
    animation: 1s ease-out 0s 1 slideInFromLeft;
    display: flex;
    justify-content: space-between;
    position: relative;
}

.logo-container h2 {
    display: flex;
    justify-content: center;
    align-items: center;
    min-width: 8rem;
}

.logo-container img {
    width: 5rem;
    height: auto;
}

.github {
    animation: 1s ease-out 0s 1 slideInFromRight;
}

.github i {
    font-size: 3rem;
    cursor: pointer;

}

.github i:hover {
    color: var(--yellow);
}

a {
    color: inherit;
}

#overlay {
    position: fixed;
    left: 0;
    top: 0;
    right: 0;
    bottom: 0;
    background: rgba(0, 0, 0, 0.3);
    pointer-events: none;
    opacity: 0;
    transition: 0.5s ease;
}

/*----------- Popup Section -------------*/
#popup {
    transform: scale(0);
    transition: 0.5s ease;
    width: 25rem;
    height: 32rem;
    border-radius: 2rem;
    font-size: 1.3rem;
    padding: 1rem;
    color: var(--white);
    background: var(--dark1);
    box-shadow: 0px 10px 15px 0px var(--black);
}

.wrapper {
    display: flex;
    flex-direction: column;
    justify-content: space-between;
    font-size: 1.3rem;
    height: 100%;
}

.popup-header {
    display: flex;
}

.popup-header i {
    position: relative;
    cursor: pointer;
    font-size: 1.6rem;
    transition: all 0.3s ease;
}

.popup-header i:hover {
    color: var(--red);
}

.popup-header h1 {
    position: relative;
    left: 1rem;
    margin: 0 auto;
    height: 2rem;
}

#add-form {
    margin-top: 2rem;
    display: flex;
    justify-content: space-between;
    flex-direction: column;
    height: 100%;
}

#add-form input {
    background: var(--dark1);
    outline: none;
    border: none;
    border-bottom: 3px solid var(--light-blue);
    color: var(--white);
    font-size: 1.2rem;
    padding: 0.5rem;
}

#add-form input::placeholder {
    color: var(--white);
    opacity: 1;
}

#add-form input:focus {
    border-bottom: 3px solid var(--yellow);
}

#add-form select {
    margin: 0 auto;
    font-size: 1.3rem;
    background: var(--light-blue);
    border: none;
    border-radius: 0.25rem;
    width: 70%;
    padding: 0.4rem;
    outline: none;
}

/* Remove IE arrow */
#add-form select::-ms-expand {
    display: none;
}

/*----------- Buttons -------------*/
.btn {
    outline: none;
    font-size: 1.3rem;
    width: 9rem;
    height: 3rem;
    cursor: pointer;
    transition: 0.1s ease;
}

.add-btn {
    font-size: 1.5rem;
    border: none;
    border-radius: 50%;
    color: var(--white);
    position: fixed;
    width: 4rem;
    height: 4rem;
    bottom: 8%;
    right: 3%;
    background-color: var(--dark1);
    transition: all 0.5s ease;
}

.add-btn:hover {
    background-color: var(--light-blue);
    border: 0.15em solid var(--light-green);
    color: var(--green);
    transform: scale(0.9);
}

#submit-btn {
    border: 0.2rem solid var(--yellow);
    color: var(--white);
    background-color: var(--dark1);
    margin: 0 auto;
    position: relative;
    bottom: 0.6rem;
}

#submit-btn:hover {
    background-color: var(--yellow);
    color: var(--dark1);
}

/* ----------- Book container --------- */
.books-container {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    flex: 1;
    max-width: 1000;
    justify-content: flex-start;
    flex-wrap: wrap;
    position: absolute;
    top: 10rem;
    left: 3rem;
    margin-right: 10rem;
    padding-bottom: 3rem;
}

.book {
    display: flex;
    color: var(--white);
    background: var(--dark1);
    width: 25rem;
    -webkit-border-top-left-radius: 1rem;
    -webkit-border-top-right-radius: 1rem;
    border-top-left-radius: 1rem;
    border-top-right-radius: 1rem;
    margin: 2rem 5rem;
    flex-direction: column;
    animation: 1s ease-out 0s 1 slideInFromLeft;
    transition: all 0.5s ease;
}

.book-content-wrapper {
    display: flex;
    flex-direction: column;
    padding-left: 0.7rem;
}

.book h3 {
    overflow-wrap: break-word;
    position: relative;
    font-size: 1.3rem;
    color: var(--yellow);
}

.book-title {
    height: 5rem;
    flex: 1;
}

.book i {
    font-size: 1.5rem;
    cursor: pointer;
    margin: 0 auto;
    position: relative;
    top: 0.7rem;
    left: 11.1rem;
}

.isRead {
    font-size: 1.4rem;
    line-height: 3.5rem;
    text-align: center;
    position: relative;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
    top: 47px;
    -webkit-background-: var(--dark1);
    background: var(--dark1);
    transition: all 0.2s ease;
    cursor: pointer;
    border-top: 4px solid var(--white);
}

.isRead:hover {
    background: var(--light-green);
}

.book i:hover {
    color: var(--red);
}

/*------------- Alerts ---------------*/
.alert {
    font-size: 1.2rem;
    display: block;
    position: absolute;
    top: 6rem;
    width: 50%;
    padding: 0.3rem;
    text-align: center;
    transition: all 1s ease-in;
    border-bottom-left-radius: 1rem;
    border-bottom-right-radius: 1rem;
    background: #b8beff;
    color: var(--black);
}


/* ----------- Extra class for JavaScript --------- */
.complete-book {
    background: var(--green);
}

.disable-event {
    pointer-events: none;
}

.fall {
    transform: translateY(8rem) rotateZ(20deg);
    opacity: 0;
}

/* key frames */
@keyframes slideInFromLeft {
    0% {
        transform: translateX(-200%);
    }

    60% {
        transform: translateX(5%);
    }

    80% {
        transform: translateX(-5%);
    }

    100% {
        transform: translateX(0);
    }
}

@keyframes slideInFromRight {
    0% {
        transform: translateX(200%);
    }

    60% {
        transform: translateX(-5%);
    }

    80% {
        transform: translateX(5%);
    }

    100% {
        transform: translateX(0);
    }
}


/*------------------ Mobile Responsive ----------------*/

@media screen and (max-width : 800px) {
    html {
        font-size: 12px;
        background: linear-gradient(#e66465, #9198e5);
        background-attachment: fixed;
        font-family: 'Roboto Slab', serif;
    }

    body {
        background: linear-gradient(#e66465, #9198e5);
        background-attachment: fixed;
    }

    header {
        padding: 0.5rem 2rem;
    }

    .add-btn {
        border: none;
        outline: none;
        background: var(--dark1);
        position: fixed;
        display: flex;
        justify-content: center;
        align-items: center;
        width: 4.5rem;
        height: 4.5rem;
        right: 5%;
        bottom: 5%;
        font-size: 1.7rem;
    }

    .add-btn:hover {
        background: var(--light-green);
        border-color: var(--light-blue);
        color: var(--light-blue);
        transform: rotate(45deg);
    }

    .alert {
        border-radius: 3rem;
        top: 5.5rem;
        position: fixed;
    }


    .logo-container img {
        width: 4.5rem;
        height: 4.5rem;
    }

    .books-container {
        font-size: 1rem;
        flex-direction: column;
        justify-content: center;
        width: 80vw;
        color: var(--dark1);
        padding-bottom: 10rem;
    }

    .book {
        font-size: 1.1rem;
        margin: 5rem auto;
        flex-direction: column;
        transition: all 0.5s ease;
        background-color: rgba(255, 255, 255, .15);
        backdrop-filter: blur(5px);
    }

    .book-title h3 {
        color: #1a1c20;
    }


    /* Form style */
    #add-form input {
        border-radius: 0;
    }
}

/* -------- iPad --------- */
@media only screen and (min-device-width: 834px) and (max-device-width: 1112px) and (-webkit-min-device-pixel-ratio: 2) {
    html {
        font-size: 13px;
        background: linear-gradient(#e66465, #9198e5);
        background-attachment: fixed;
        font-family: 'Roboto Slab', serif;
    }

    body {
        background: linear-gradient(#e66465, #9198e5);
        background-attachment: fixed;
    }

    .alert {
        border-radius: 3rem;
        position: fixed;
    }

    .logo-container img {
        width: 5rem;
        height: 5rem;
    }


    .books-container {
        width: 90vw;
        color: var(--dark1);
        padding-bottom: 10rem;
    }

    .book {
        font-size: 1.2rem;
        transition: all 0.5s ease;
        margin: 4rem;
    }



    .book-title h3 {
        color: var(--yellow)
    }

    .add-btn {
        border: none;
        outline: none;
        background: var(--dark1);
        position: fixed;
        display: flex;
        justify-content: center;
        align-items: center;
        right: 7%;
        bottom: 7%;
        font-size: 1.7rem;
    }

    /* Form style */
    #add-form input {
        border-radius: 0;
    }
}

